--- a/index.html
+++ b/index.html
@@ -85,10 +85,17 @@
       }
       .languages .span10 {
       margin-top:20px;
-      border:1px solid #bbb;
+      border:2px solid #999;
       }
-      .item.active a {
-      border-top:none;
+      .nav-tabs {
+      border-bottom-color:#888;
+      }
+
+      .item.active a, .item.active a:hover {
+      border-top-color:transparent;
+      border-bottom-color:transparent;
+      border-left-color:#888;
+      border-right-color:#888;
       }
       .languages h2 {
       padding-top:20px;
@@ -98,23 +105,11 @@
       .nav.nav-tabs {
       margin-bottom:0px;
       }
-      .nav.nav-pills li a {
-      margin-top:0px;
-      margin-bottom:0px;
-      height:100px;
-      border-radius:0px;
-      padding-bottom:0px;
-      webkit-border-radius:0px;
-      }
       .section2 {
       margin-top:20px;
       }
       .tab-pane {
-      color:black;
       padding:10px;
-      }
-      .trad {
-      font-weight:bold;
       }
     </style>
 
@@ -240,15 +235,31 @@
 		</div>
 	       </div>
 		  <div class="tab-pane" id="node-js">
-		    <h4>Node.js Live Debugging</h4>
+		    <h5>Node.js Live Debugging</h5>
+		    <h5>Grunt, Gruntfiles, Grunt automation</h5>
+		    <h5>Node Package Managaer</h5>
+		    <h5>Yeomen</h5>
+		  </div>
+		  <div class="tab-pane" id="python">
+		    <h5>CPython + IPython</h5>
+		    <h5>Web Frameworks</h5>
+		    <ul>
+		      <li>Django</li>
+		      <li>Flask</li>
+		      <li>web2py</li>
+		      <li>Among Others</li>
+		    </ul>
+		    <h5>Compile to JavaScript</h5>
+		    <h5>PyLint</h5>
 		  </div>
 	     </div>
 	  </div>
 	</div>
 	<div class="row-fluid section2">
 	  <div class="span5 copy offset1">
+	    <h3>Retro Terminal, Git Version Management, et al cool features</h3>
 	    <p>	     
-	      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.  
+	      A super-cool super-real virtual terminal environment is baked-in. The terminal supports node, npm, yeoman, grunt, express, amongst its strong pleothera of dev tools. Furthermore, the built-in text editor support emacs-key bindings, and you can connect projects to Git, and deploy on Heroku. Commands to 'git add + save,' etc or baked-in to the text-editor, and anyway the terminal is always one click away.
 	    </p>
 	  </div>
   	  <div class="span5">
@@ -261,21 +272,51 @@
 	    <div class="accordion" id="accordion1">
 	      <div class="accordion-group">
 		<div class="accordion-heading">
-		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseOne">What does FAQ stand for?</a>
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseOne">Excuse me, but how is this going to work?</a>
 		</div>
 		<div id="collapseOne" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    Frequently Asked Question
+		    Aside from HTML, CSS and JS code, all other code will be run server-side in a secure sandbox. Terminal access will be available by a web client connected by Socket.IO. For future versions, we are considering SSH connectivity.
 		  </div>
 		</div>
 	      </div>
 	      <div class="accordion-group">
 		<div class="accordion-heading">
-		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseTwo">What's a frequently asked question?</a>
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseTwo">When will Athena be released?</a>
 		</div>
 		<div id="collapseTwo" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    A question which is commonly asked by users.
+		   We intend for a public release by Christmas, and a soon-coming beta releasing.
+		  </div>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseThree">But then what will be the pricing, eh?</a>
+		</div>
+		<div id="collapseThree" class="accordion-body collapse">
+		  <div class="accordion-inner">
+2GB for free across a maximum of 10 projects, and 25GB for $12 covering an unlimited number of projects. 
+		  </div>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseFour">What's the money for?</a>
+		</div>
+		<div id="collapseFour" class="accordion-body collapse">
+		  <div class="accordion-inner">
+Whilst we have betas, and the scaffolding is set out, we need to expand our virtual terminal, concot the Python sandbox, revamp the editor, and add live debugging to Node.js, amongst a hoarder other nontrivial furtherances on our roadmap.
+		  </div>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion1" href="#collapseFive">Who do I contact for queries?</a>
+		</div>
+		<div id="collapseFive" class="accordion-body collapse">
+		  <div class="accordion-inner">
+		    Email me (Hashan Punchihewa) at: <a href="mailto:hashan.punchihewa@gmail.com">hashan.punchihewa@gmail.com</a>
 		  </div>
 		</div>
 	      </div>
