--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <style type="text/css">
       body {
       font-family:'Open Sans', Helvetica, Arial, sans-serif;
+      background-color:#e5e5e5;
       }
       .heading, .brand {
       text-align:center;
