Fixed bg-colour bug

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
       }
       .tab-pane {
       padding:10px;
+      }
+      .tab-content {
       background-color:white;
       }
     </style>
