--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       .tab-content {
       background-color:white;
       }
+      div.addthis_toolbox {
+      width:180px;
+      margin:0 auto;
+      }
     </style>
 
     </head>
@@ -192,9 +196,19 @@
 	      <button class="btn btn-success btn-large">Preorder</button>
 	    </div>
 	    <div class="span8 social offset2">
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-	    </div>
+	      <!-- AddThis Button BEGIN -->
+	      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		<a class="addthis_button_preferred_1"></a>
+		<a class="addthis_button_preferred_2"></a>
+		<a class="addthis_button_preferred_3"></a>
+		<a class="addthis_button_preferred_4"></a>
+		<a class="addthis_button_compact"></a>
+		<a class="addthis_counter addthis_bubble_style"></a>
+	      </div>
+	      <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51faf21c73f3eee1"></script>
+	      <!-- AddThis Button END -->
+	      </div>
 	  </div>
 	</div>
 	<div class="row-fluid languages">
@@ -237,6 +251,15 @@
 		    <li>CSSLint</li>
 		  </ul>
 		</div>
+		<div class="span4">
+		  <h5>Package Managers</h5>
+		  <ul>
+		    <li>Node Package Manager (NPM)</li>
+		    <li>Bower</li>
+		    <li>Jam</li>
+		    <Li>Yeoman</li>
+		  </ul>
+		</div>
 	       </div>
 		  <div class="tab-pane" id="node-js">
 		    <h5>Node.js Live Debugging</h5>
@@ -261,7 +284,7 @@
 	</div>
 	<div class="row-fluid section2">
 	  <div class="span5 copy offset1">
-	    <h3>Retro Terminal, Git Version Management, et al cool features</h3>
+	    <h3>Retro Terminal, Git Version Management, Emacs Commands</h3>
 	    <p>	     
 	      A super-cool super-real virtual terminal environment is baked-in. The terminal supports node, npm, yeoman, grunt, express, amongst its strong pleothera of dev tools. Furthermore, the built-in text editor support emacs-key bindings, and you can connect projects to Git, and deploy on Heroku. Commands to 'git add + save,' etc or baked-in to the text-editor, and anyway the terminal is always one click away.
 	    </p>
